2003-01-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* yencode.tcl:
	* uuencode.tcl: Added Tcl 8.2 version requirement, bumped versions
	and added copyright to man pages. Fixed uuencode to work with Tcl 8.2

2002-06-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* base64.tcl:
	* base64.n:
	* base64.man: Bumped base64 to version 2.2.1.

	* pkgIndex.tcl:
	* uuencode.tcl:
	* uuencode.n:
	* uuencode.man: Bumped uuencode to version 1.0.1.

2002-05-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* yencode.test: Fixed SF Tcllib Bug #548354 so that the datafile
	  used by the test is found even if the build directory is outside
	  of the tcllib directory hierarchy. Original patch provided by Larry
	  Virden <lvirden@users.sourceforge.net>, changed by me to work in
	  my configuration too.

2002-04-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uuencode.tcl: 
	* yencode.tcl:
	* base64.tcl: Fixed decoding of empty string in tcl
	  implementation. Fixes bug #548112.

2002-04-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* yencode.tcl, yencode.test, yencode.man, yencode.test.data,
	* yencode.test.out: initial import of yEnc encode/decode package
	plus man page and test.

2002-04-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* uuencode.tcl: fixed bug #544452 to handle DOS input files and
	tolerate incorrect uuencoded line lengths.
	* uuencode.test: added tests for the above bug conditions.

2002-01-17  Pat Thoyts <patthoyts@users.sourceforge.net>

	* uuencode.tcl: added support for Trf and fixed length bug
	
2002-01-16  Pat Thoyts <patthoyts@users.sourceforge.net>

	* uuencode.tcl: initial import of uuencode package
	* pkgIndex.tcl: added uuencode package
	
2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* base64.tcl: Restricted export list to public API.
	  [456255]. Patch by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>
